# cr8hs

./: README.md  cr8hs.cabal  stack.yaml
src/: Main.hs
