name:                cr8hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mfussenegger/cr8hs#readme
license:             BSD3
license-file:        LICENSE
author:              Mathias Fußenegger
maintainer:          github@zignar.net
copyright:           2018 Mathias Fußenegger
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cr8hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pipes
                     , text
                     , aeson
                     , optparse-applicative
                     , bytestring
                     , http-client
                     , http-client-tls

